# midi-trainer

./: index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate_icons.py  icon.icns
src-tauri/src/: audio.rs  main.rs  midi.rs  models.rs  storage.rs
src/components/: ReplayModal.tsx  StaffNotation.tsx  VirtualKeyboard.tsx
src/pages/: Achievements.tsx  Battle.tsx  ChordPractice.tsx  Dashboard.tsx  History.tsx  RhythmPractice.tsx  ScalePractice.tsx  Settings.tsx  SightReading.tsx
src/store/: appStore.ts  battleStore.ts
src/styles/: achievements.css  app.css  battle.css  dashboard.css  history.css  index.css  keyboard.css  practice.css  replay.css  settings.css  sight-reading.css  staff.css
src/utils/: musicTheory.ts
