[package]
name = "midi-trainer"
version = "0.1.0"
description = "MIDI Keyboard Trainer & Music Theory Learning App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midir = "0.9"
rodio = "0.17"
cpal = "0.15"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["chrono"] }
anyhow = "1"
thiserror = "1"
crossbeam-channel = "0.5"
parking_lot = "0.12"

[features]
# 默认启用 custom-protocol 以改进开发体验
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
